--- a/lostparadigm.html
+++ b/lostparadigm.html
@@ -21,7 +21,7 @@
     <div class="webgl-content">
       <div id="gameContainer" style="width: 960px; height: 540px"></div>
       <div class="gamefooter">
-          <a class="btn btn-primary btn-back text-uppercase noUnderline" href="index.html">⬅Back</a>
+          <a class="btn btn-primary btn-back text-uppercase noUnderline" href="index.html">Back</a>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
           
 <!--        <div class="title">Bridgewalk</div>-->
