--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
           <div class="col-sm-7 mr-0">
               
         <h2 class="intro-heading text-uppercase">Hi, I'm Jovan Catampongan.</h2>
-        <p>I’m a Game Designer & Artist based in Melbourne, Australia. I've completed Diploma & Advanced Diploma of Screen and Media (Interactive Media) at RMIT.</p>
+        <p>I'm a Game Designer & Artist based in Melbourne, Australia. I've completed Diploma & Advanced Diploma of Screen and Media (Interactive Media) at RMIT.</p>
         <p>When I design something, I take a pragmatic approach by making things simple yet effective. Which I then build up the complexity if needed. I always strive to improve myself and I make sure that my work is of the highest quality.</p>
               
               <a class="btn btn-primary btn-xl text-uppercase" href="mailto:jovangamer430.gmail.com">Message Me</a>
