--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ based in Melbourne, Australia.</h2>
         </div>
       </div>
         <div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="https://youtu.be/9lGHIabQz6k" allowfullscreen></iframe>
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9lGHIabQz6k" allowfullscreen></iframe>
 </div>
         <!--
       <div class="row text-center">
