--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ In this animation, I turn the 3D cube into a 3D laptop, then the laptop turns in
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; JCAT'S WIT 2019</span>
+          <span class="copyright">Copyright &copy; JCAT'S WIT 2023</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
@@ -613,8 +613,8 @@ In this animation, I turn the 3D cube into a 3D laptop, then the laptop turns in
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.instagram.com/jcats_wit/">
-                <i class="fab fa-instagram"></i>
+              <a href="https://jovan-catampongan.itch.io/">
+                <i class="fab fa-itch-io"></i>
               </a>
             </li>
           </ul>
