--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; JCAT'S WIT 2019</span>
+          <span class="copyright">Copyright &copy; JCAT'S WIT 2023</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
@@ -168,8 +168,8 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.instagram.com/jcats_wit/">
-                <i class="fab fa-instagram"></i>
+              <a href="https://jovan-catampongan.itch.io/">
+                <i class="fab fa-itch-io"></i>
               </a>
             </li>
           </ul>
