--- a/index.html
+++ b/index.html
@@ -1343,8 +1343,8 @@ As the player crosses successfully, another platform pops up and it varies in di
               <div class="modal-body">
                 <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bAsGQu-FSlM" allowfullscreen></iframe></div>
-                  <div class="col-lg-12 mx-auto">
-                    <div class="modal-body">
+                  <!-- <div class="col-lg-12 mx-auto">
+                    <div class="modal-body"> -->
                       <div class="embed-responsive embed-responsive-16by9">
                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/v4aCJXR9Tok" allowfullscreen></iframe></div>
                         <p></p>
