--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@ based in Melbourne, Australia.</h2>
 <!--
                 <h2 class="text-uppercase">Project Name</h2>
 -->
-                <p class="item-intro text-muted">Click the image to play the game.</p>
+                <p class="item-intro text-muted">Click the image to play my game.</p>
 
                   <a href="https://jovan-catampongan.itch.io/thecityofintrigues"><img class="img-fluid d-block mx-auto" src="img/city main menu.jpg" alt="city main menu"></a>
                 <p>My first interactive fiction game that is made using Twine and all the illustrations and writing is my own. There are three storylines to choose from as you read the story. The audio in the game is copyright free and its credited when you click ‘Credits’.
@@ -635,7 +635,7 @@ If you want to play my game, click the image above then click the icon on the bo
             <div id="gameContainer" style="text-align:center; width: 960px; height: 540px; margin:auto;"></div>
             </div>
 -->
-                  <p class="item-intro text-muted">Click the image to play the game.</p>
+                  <p class="item-intro text-muted">Click the image to play my game.</p>
                   
                   <a href="bridgewalk.html"><img class="img-fluid d-block mx-auto" src="img/bridgewalk main menu.jpg" alt="bridgewalk main menu"></a>
                 <p>Bridgewalk is a 2D endless runner arcade game that is made using Unity and its inspired by the 3D game PLANK! 
@@ -667,7 +667,7 @@ As the player crosses successfully, another platform pops up and it varies in di
             <div class="col-lg-12 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                  <p class="item-intro text-muted">Click the image to play the game.</p>
+                  <p class="item-intro text-muted">Click the image to play my game.</p>
                   <a href="lostparadigm.html"><img class="img-fluid d-block mx-auto" src="img/lostparadigm main menu.jpg" alt="lostparadigm main menu"></a>
                 <p>Lost;Paradigm is my first solo 2D platformer Unity game where the player woke up and finds himself lost then tries to find answers. <br>In the end, the player found someone that knows everything and you talk to him through dialogue options.</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -697,7 +697,7 @@ As the player crosses successfully, another platform pops up and it varies in di
             <div class="col-lg-12 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                  <p class="item-intro text-muted">Click the image to play the game.</p>
+                  <p class="item-intro text-muted">Click the image to play my game.</p>
                   <a href="existentialdebate.html"><img class="img-fluid d-block mx-auto" src="img/visualnovel.png" alt="visual novel main menu"></a>
                 <p>This is my first visual novel game. <br>The game takes place in a podcast between two characters that are debating the nature of existence with the player as the host or a Judge.</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -751,7 +751,7 @@ As the player crosses successfully, another platform pops up and it varies in di
             <div class="row">
               <div class="col-lg-12 mx-auto">
                 <div class="modal-body">
-                    <p class="item-intro text-muted">Click the image to play the game.</p>
+                    <p class="item-intro text-muted">Click the image to play my game.</p>
                     <a href="ticpong.html"><img class="img-fluid d-block mx-auto" src="img/tictactoe.png" alt="tic tac toe game"></a>
                   <p>It's a two player game that is both a tic tac toe while also a pong game. <br>Controls: W & S keys for Player 1 (X)Up & Down keys for Player 2 (O) Click to select the squares (both players)</p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -778,7 +778,7 @@ As the player crosses successfully, another platform pops up and it varies in di
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <div class="modal-body">
-                <p class="item-intro text-muted">Click the image to play the game.</p>
+                <p class="item-intro text-muted">Click the image to play my game.</p>
                 <a href="retrofutureroom.html"><img class="img-fluid d-block mx-auto" src="img/retroroomdiorama.png" alt="retro room"></a>
               <p>This is a 3D interactive diorama environment in which you can roam around the room and also see the whole room from the outside. <br>Controls: WASD to move. C to change perspective. Left click to interact</p>
               <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -811,7 +811,7 @@ As the player crosses successfully, another platform pops up and it varies in di
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <div class="modal-body">
-              <p class="item-intro text-muted">Click the image to play the game.</p>
+              <p class="item-intro text-muted">Click the image to play my game.</p>
                 <a href="https://deus0.itch.io/floating-reveries"><img class="img-fluid d-block mx-auto" src="img/floatingreveries_gamplay.jpg" alt="floating reveries"></a>
               <p>Floating Reveries is a game about a near death experience dream of someone like you and I. In this dream, a Mysterious Figure points out that the player has lost his memories and must recover them through a strange place with islands that float. In his endeavors, he finds his own direction & remembers a few things. But he's still lost as the dream itself, reflects upon the self. </p>       
               <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -890,7 +890,7 @@ As the player crosses successfully, another platform pops up and it varies in di
           <div class="row">
             <div class="col-lg-12 mx-auto">
               <div class="modal-body">
-                <p class="item-intro text-muted">Click the image to play the game.</p>
+                <p class="item-intro text-muted">Click the image to play my game.</p>
                 <a href="https://jovan-catampongan.itch.io/theforest-procedurally-generated"><img class="img-fluid d-block mx-auto" src="img/procgen2.jpg" alt="proc gen"></a>
                 <p>This project procedurally generates the forest once and you can also generate the forest again by talking to the flat board NPC named "Stranger"</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -1315,9 +1315,10 @@ As the player crosses successfully, another platform pops up and it varies in di
           <div class="row">
             <div class="col-lg-12 mx-auto">
               <div class="modal-body">
-                <p class="item-intro text-muted">Click the image to download the xNode Dialogue System</p>
-                <a href="https://cdn.matix-media.net/dd/5d7a0a68"><img class="img-fluid d-block mx-auto" src="img/xnode graph.png" alt=""></a>
-                <p>A node based dialogue system for Unity using the xNode package.</p>
+                <p class="item-intro text-muted">Click the image to visit my itch.io page</p>
+                <a href="https://jovan-catampongan.itch.io/xnode-dialogue-system"><img class="img-fluid d-block mx-auto" src="img/xnode graph.png" alt=""></a>
+                <p>A node based dialogue system for Unity using the xNode package. <a href="https://cdn.matix-media.net/dd/5d7a0a68" target="_blank">Click here to download my dialogue system.</a></p>
+                <!-- <a href=”https://jovan-catampongan.itch.io/xnode-dialogue-system”>Click here to visit the itch.io post</a> -->
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i> Close Project</button>
               </div>
