--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="intro-text row">
           <div class="col-6 mr-0">
         <h1 class="intro-heading text-uppercase">Hi, I'm Jovan    </h1>
-        <h2 class="intro-lead-in">I’m a Game Designer & Artist 
+        <h2 class="intro-lead-in">I'm a Game Designer
 based in Melbourne, Australia.</h2>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#showreel">Showreel</a>
           </div>
