--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
               
         <h2 class="intro-heading text-uppercase">Hi, I'm Jovan Catampongan.</h2>
         <p>I'm a Game Designer based in Melbourne, Australia. I've completed Diploma & Advanced Diploma of Screen and Media (Interactive Media) and Bachelor of Design (Games) with Distinction at RMIT.</p>
-        <p>I take a pragmatic approach by simplifying things down and then build up the complexity if needed. I firmly believe that to live is a pursuit to create things that we care about. Giving up this pursuit is to slowly die while living. It is from this mentality that I always strive to improve myself. </p>
+        <p>I take a pragmatic approach by simplifying things down and then build up the complexity if needed. I hold a firm belief that to live is a pursuit to create things that we care about. Giving up this pursuit is to slowly die while living. It is from this mentality that I always strive to improve myself. </p>
         <a class="btn btn-primary btn-xl text-uppercase" href="mailto:jovangamer430.gmail.com">Message Me</a>
 						
 		
