--- a/about.html
+++ b/about.html
@@ -64,9 +64,10 @@
           <div class="col-sm-7 mr-0">
               
         <h2 class="intro-heading text-uppercase">Hi, I'm Jovan Catampongan.</h2>
-        <p>I'm a Game Designer based in Melbourne, Australia. I've completed Diploma & Advanced Diploma of Screen and Media (Interactive Media) and Bachelor of Design (Games) with Distinction at RMIT.</p>
-        <p>I take a pragmatic approach by simplifying things down and then build up the complexity if needed. I hold a firm belief that to live is a pursuit to create things that we care about. Giving up this pursuit is to slowly die while living. It is from this mentality that I always strive to improve myself. </p>
-        <a class="btn btn-primary btn-xl text-uppercase" href="mailto:jovangamer430.gmail.com">Message Me</a>
+        <p>I'm a Game Designer based in Melbourne, Australia. I've completed Bachelor of Design (Games) with Distinction at RMIT.</p>
+        <p>While designing, I take a pragmatic approach by simplifying things down and then build up the complexity if needed. I hold a firm belief that to live is a pursuit to create things that we care about. Giving up this pursuit is to slowly die while living. It is from this mentality that I always strive to improve myself. </p>
+        <a class="btn btn-primary btn-xl" href="cv/CV_by_Jovan_Catampongan.pdf">Download CV</a>
+        <!-- <a class="btn btn-primary btn-xl text-uppercase" href="cv/CV_by_Jovan_Catampongan.pdf">View CV</a> -->
 						
 		
 <!--        <h6 class="intro-lead-in">I’m a Game Designer & Artist based in Melbourne, Australia. I've completed Diploma & Advanced Diploma of Screen and Media (Interactive Media) at RMIT. </h6>-->
