embedded the design docs

--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,8 @@ As the player crosses successfully, another platform pops up and it varies in di
                       She lives in a world of empires that vies for dominance through gunpowder and magic—
                       reminiscent of late 18th century European warfare. Magic is mostly in the form of weapon and
                       clothing enchantments where you can enchant a bullet to be explosive or clothes that protect you
-                      from bullets. Spellcasting is a rarity in this world because the knowledge about it is lost.</p>
+                      from bullets. Spellcasting is a rarity in this world because the knowledge about it is lost. <a href="designdoc/CharacterDesign.pdf" target="_blank">Click here to see the Character Design Document.</a></p>
+                      
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i> Close Project</button>
               </div>
@@ -1239,7 +1240,10 @@ As the player crosses successfully, another platform pops up and it varies in di
                       This wiped out an Ancient Global Civilization and reset mankind back to the stone age. Myths and Legends of a Great Flood were ingrained into every
                       culture after thousands of years. Speaking volumes of a destructive scale that struck the world. Eventually, a new civilization arises with the remains of
                       the old world lingering, but in time it decays. As the stagnating modern world lost its roots of the past. Symbolically, this is shown when the cliff bridge
-                      is split into ruins. Separating two cities on top of each cliff. Below the cliffs is a grassy plain that was once filled with floodwater during the cataclysm. </p>
+                      is split into ruins. Separating two cities on top of each cliff. Below the cliffs is a grassy plain that was once filled with floodwater during the cataclysm. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+                      <a href="designdoc/EnvironmentDesign.pdf" target="_blank">Click here to see the Environment Design Document.</a> </p>
+                      <!-- <p><a href="designdoc/EnvironmentDesign.pdf" target="_blank">Environment Design Document.</a></p> -->
+                      
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i> Close Project</button>
               </div>
