changing yumpu embed

--- a/index.html
+++ b/index.html
@@ -1301,7 +1301,7 @@ As the player crosses successfully, another platform pops up and it varies in di
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                  <style>.embed-container { position: relative; padding-bottom:56.25%; height:0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%;}</style><div class='embed-container' data-page-width='452' data-page-height='640' id='ypembedcontainer' ><iframe   src="https://www.yumpu.com/en/embed/view/iM8Ecu9hK0TGgnJ1" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe></div><script src='https://players.yumpu.com/modules/embed/yp_r_iframe.js' ></script>
+                <iframe width="800px" height="694px" src="https://www.yumpu.com/en/embed/view/hn9rquOgU7RKWM50" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe><br><a href="https://www.yumpu.com/en/document/view/62873853/flooded-thoughts" title="Flooded Thoughts" target="_blank">Flooded Thoughts</a>
                 <p>A short graphic novel based on the Great Flood in which I then reinterpret it poetically.</p>
                 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -1328,7 +1328,8 @@ As the player crosses successfully, another platform pops up and it varies in di
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                <style>.embed-container { position: relative; padding-bottom:56.25%; height:0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%;}</style><div class='embed-container' data-page-width='500' data-page-height='353' id='ypembedcontainer' ><iframe   src="https://www.yumpu.com/en/embed/view/HO9PkjCA1Uqr4Xax" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe></div><script src='https://players.yumpu.com/modules/embed/yp_r_iframe.js' ></script>
+                <iframe width="800px" height="466px" src="https://www.yumpu.com/en/embed/view/8JZTkqUwEDyMYVn7" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe><br><a href="https://www.yumpu.com/en/document/view/62156841/sleeping-final-version" title="Sleeping - Final Version " target="_blank">Sleeping - Final Version </a>
+                <!-- <style>.embed-container { position: relative; padding-bottom:56.25%; height:0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%;}</style><div class='embed-container' data-page-width='500' data-page-height='353' id='ypembedcontainer' ><iframe   src="https://www.yumpu.com/en/embed/view/HO9PkjCA1Uqr4Xax" frameborder="0" allowfullscreen="true"  allowtransparency="true"></iframe></div><script src='https://players.yumpu.com/modules/embed/yp_r_iframe.js' ></script> -->
                 <p>A children's book design where the book talks to you through its writing.</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i> Close Project</button>
